# esphome

./: CMakeLists.txt  Makefile
components/rfm69/: CMakeLists.txt  rfm69.cpp  rfm69.h  rfm69_registers.h
test/: CMakeLists.txt  main.cpp
test/mock_esphome/esphome/components/spi/: spi.cpp  spi.h
test/mock_esphome/esphome/core/: component.h  hal.h  log.h
